--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.top-nav-right {
+  float: right;
+  position: relative;
+  bottom: 20px;
+}
