--- a/style.css
+++ b/style.css
@@ -37,20 +37,36 @@ li {
   padding-left: 10px;
 }
 
+article {
+  flex: 1;
+}
+
 .main {
   display: flex;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
-  background-color: grey;
+  background-color: rgb(211, 211, 211);
+  height: 600px;
+}
+
+.main-1 {
+  display: flex;
+  width: 70%;
+  padding: 5px;
+}
+
+.main-2 {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  padding: 5px;
 }
 
 .art-1 {
   background-image: url(img/main-pic1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 545px;
-  width: 2000px;
   color: white;
 }
 
@@ -58,8 +74,6 @@ li {
   background-image: url(img/main-pic2.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 300px;
-  width: 1000px;
   color: white;
 }
 
@@ -67,11 +81,11 @@ li {
   background-image: url(img/main-pic3.png);
   background-repeat: no-repeat;
   background-size: cover;
-  flex-wrap: wrap;
-  height: 300px;
-  width: 1000px;
   color: white;
+  margin-top: 10px;
 }
 
-@media only screen and (max-width: 375px) {
+.news {
+  width: 270px;
+  height: 135px;
 }
