--- a/style.css
+++ b/style.css
@@ -85,6 +85,21 @@ article {
   margin-top: 10px;
 }
 
+.news-title {
+  position: relative;
+  left: 410px;
+  margin-top: 100px;
+}
+
+table {
+  display: flex;
+  justify-content: center;
+}
+
+td {
+  max-width: 100px;
+}
+
 .news {
   width: 270px;
   height: 135px;
